--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ section .section-title {
 
   * Template Name: IT Solutions Agency
   * Author: ZAHID HASAN
-``* Author;s gitHub: https://github.com/mr-zahid/project
+``* Author;s gitHub: https://github.com/mr-zahid
   * Author;s Linkedin: https://www.linkedin.com/in/zahid-hasan-9894811b5/
   * Author's Email: zahidhasan4306@gmail.com
 
